feat: create and implement array repository return
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>